# enterprise-lcs-webadmin

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json
admin/: package-lock.json  package.json
admin/public/: index.html
admin/src/: App.css  App.js  privateRoute.js  publicRoute.js  util.js
admin/src/components/: 404.js  about.js  dashboard.js  login.js  logout.js
backend/: Cargo.toml  README.md
backend/api-doc/: DELETE.md  GET.md  POST.md  PUT.md
backend/src/: config.rs  db.rs  file.rs  handler.rs  linux.rs  main.rs  security.rs  structs.rs  tool.rs
backend/src/config/: named.rs  templates.rs  update.rs
backend/src/db/: hostapd.rs  named.rs  storage.rs  systemdnetworkd.rs  users.rs
backend/src/handler/: delete.rs  get.rs  helper.rs  post.rs  put.rs
backend/src/handler/get/: hostapd.rs  named.rs  storage.rs  systemdnetworkd.rs  systemsettings.rs  timedatectl.rs  update.rs  users.rs
backend/src/handler/post/: hostapd.rs  named.rs  storage.rs  systemdnetworkd.rs  systemsettings.rs  timedatectl.rs  update.rs  users.rs
backend/src/linux/: storage.rs  systemsettings.rs  update.rs
public/: asset-manifest.json  index.html  precache-manifest.346982422f46b2f4c2cdfbfa16644ec9.js  precache-manifest.47f2b3c15543f67274c498ccc3cebd49.js  precache-manifest.ab26358a10bd9cb40dd670c3a9e69de2.js  precache-manifest.df7cda61ef05635e40749c9b10ea6b61.js  precache-manifest.e84ad166654b3f9afcd627f7d6a29a45.js  precache-manifest.eabe5b93c6f92af15ba0459a805691c2.js  service-worker.js
public/static/css/: 2.c4f2e146.chunk.css  2.c4f2e146.chunk.css.map  main.24b6dc4f.css  main.24b6dc4f.css.map  main.268a9c1d.chunk.css  main.268a9c1d.chunk.css.map
public/static/js/: 1.257f6f77.chunk.js  1.257f6f77.chunk.js.map  2.0bce125a.chunk.js  2.3626c70e.chunk.js  2.8c45c546.chunk.js  2.9559d64f.chunk.js  2.ab246e76.chunk.js  (+16 more)
(+48 files in other folders)
