[package]
name = "backend"
version = "0.1.0"
authors = ["IsaacJReay <isaacjacksonreay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors="*"
actix-files = "*"
actix-multipart = "*"
actix-web = "*"
block-utils = "*"
chrono = "*"
aes-gcm-siv = "*"
futures = "*"
ipnetwork = "*"
pam = "*"
run_script = "*"
sanitize-filename = "*"
serde = "*"
sqlite = "*"
wildmatch = "*"
rand="*"
base64="*"
walkdir = "*"