[package]
name = "backend"
version = "0.1.0"
authors = ["IsaacJReay <isaacjacksonreay@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "*"
actix-files = "*"
actix-web = "*"
aes-gcm-siv = "*"
block-utils = "*"
chrono = "*"
flate2 = "*"
fork = "*"
ipnetwork = "*"
jsonwebtoken = "*"
pam = "*"
reqwest = { version = "*", features = ["blocking"] }
run_script = "*"
serde = { version = "*", features = ["derive"] }
rusqlite = "*"
rand = "*"
tar = "*"
toml = "*"
walkdir = "*"
